--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@ body, p, div {
   font-size: 20px;
   font-family: Helvetica, sans-serif;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
